--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@
     /*============ About Me Section. ============*/
     /* My Signature Header <h2> */
     .about-me__info--subtitle {
-        padding: 7px;
+        padding: 0.438em !important;
         font-size: 0.89em !important;
         background: linear-gradient(to right, #71713a, #544478);
         -webkit-background-clip: text;
@@ -169,7 +169,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        max-width: 20em;
+        max-width: 20em !important;
         margin: 0 auto;
         text-align: center;
     }
@@ -393,9 +393,10 @@
         list-style: armenian;
         transition-duration: 0.25s;
         background-image:url('./assets/img/me3.jpeg');
-        opacity: 1;
-        background-size:60% 35%;
+        background-repeat: no-repeat;
+        background-size:60% 30.5%;
         background-attachment: fixed;
+        opacity: 1;
     }
     
     .burger__topping {
@@ -515,13 +516,16 @@
     /* Tech Stack Header. */
     .tech__section__title {
         /* Ref. https://blog.webdevsimplified.com/2022-08/css-viewport-units/#:~:text=vw%20stands%20for%20Viewport%20Width,the%20width%20of%20your%20viewport. */
-        width: 10vi; /* 250px */
+        width: fit-content !important;
         /* Ref. https://developer.mozilla.org/en-US/docs/Web/CSS/z-index */
-        font-size: 2em;
+        font-size: 1em !important;
         /* Remember that the syntax for box-shadow is: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color];  Ref. https://css-tricks.com/almanac/properties/b/box-shadow/ */
         /* Other Ref. https://www.w3schools.com/css/css3_shadows_box.asp#:~:text=Set%20the%20Spread%20Radius%20of,the%20size%20of%20the%20shadow. */
-        box-shadow: 3px 3px 3px 3px rgb(2,0,36);
-        background: radial-gradient(circle, rgba(2,0,36,0.6363139005602241) 0%, rgba(9,9,121,0.6223082983193278) 35%, rgba(65,72,74,0.6727284663865547) 100%); border-radius: 45px;
+        /* box-shadow: 3px 3px 3px 3px rgb(2,0,36);
+        background: radial-gradient(circle, rgba(2,0,36,0.6363139005602241) 0%, rgba(9,9,121,0.6223082983193278) 35%, rgba(65,72,74,0.6727284663865547) 100%); border-radius: 2.813em !important; */
+        display: flex !important;
+        justify-content: center !important;
+        align-content: center !important;
     }
 
     /* Ref. Effect https://www.w3schools.com/howto/howto_css_glowing_text.asp */
@@ -537,11 +541,11 @@
 
     @-webkit-keyframes glow {
         from {
-            text-shadow: 0 0 .9px #4169e3, 0 0 .9px #F99245, 0 0 .9px white;
+            text-shadow: 0 0 0.056em #4169e3, 0 0 0.056em #F99245, 0 0 0.056em white;
         }
         
         to {
-            text-shadow: 0 0 .82px white, 0 0 .82px #F99245, 0 0 .82px #4169e1;
+            text-shadow: 0 0 0.051em white, 0 0 0.051em #F99245, 0 0 0.051em #4169e1;
         }
     }
 
@@ -554,15 +558,15 @@
 
     .addTech {
         width: 25%;
-        display: flex;
-        justify-content: center;
+        display: flex !important;
+        justify-content: center !important;
         position: relative;
     }
 
     .tech__img--wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
         padding: 25px 16px;
     }
 
@@ -585,7 +589,7 @@
         transition: all 300ms ease;
         opacity: 0;
         font-weight: 900;
-        font-size: 1.8em;
+        font-size: 1em;
     }
 
     .groovy {
@@ -654,17 +658,17 @@
     }
 
     .project__list {
-        padding-top: 40px;
+        padding-top: 2.5em;
     }
 
     .project {
-        margin-bottom: 135px;
+        margin-bottom: 8.438em;
     }
 
     .project__wrapper {
         display: flex;
-        box-shadow: 0 20px 80px rgba(58, 78, 118, 0.45);
-        border-radius: 20px;
+        box-shadow: 0 1.25em 5em rgba(58, 78, 118, 0.45);
+        border-radius: 1.25em;
         overflow: hidden;
         position: relative;
     }
@@ -695,15 +699,15 @@
 
     .project:hover .project__img {
         transform: scale(2);
-        filter: blur(5px);
+        filter: blur(0.313em);
     }
 
     .project__description {
         position: absolute;
         top: 50%;
-        left: 90px;
+        left: 1.5em !important;
         transform: translateY(100%);
-        max-width: 600px;
+        max-width: 20em !important;
         z-index: 3;
         opacity: 0;
         transition: transform 450ms ease, opacity 300ms ease;
@@ -716,7 +720,7 @@
 
     .project__title {
         text-align: left;
-        font-size: 3em;
+        font-size: 1em !important;
         font-weight: bold;
         background: linear-gradient(to right, orange, white, orange, white, orange, white);
         -webkit-background-clip: text;
@@ -726,7 +730,7 @@
     /* I want to target the projects sub-title. */
     .project__sub-title {
         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1em;
+        font-size: 0.7em !important;
         text-align: left;
         display: flex;
         flex-direction: column;
@@ -766,7 +770,38 @@
 
     .third:hover::before {
         content: "HTML5 74.2% | JavaScript 17.1% | CSS3 8.7%";
-        font-size: 1em;
+        font-size: 0.5em !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-content: center !important;
+        padding: 0 !important;
+        box-sizing: content-box;
+        background: linear-gradient(to right, orange, white, orange, white, orange, white);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .se:hover::before {
+        content: "These Search Engines are a responsive web app that displays images and information about space, stars and planets. The user enters a desired word, and when the search button is pressed results appear using two NASA API's and one Wikipedia API.";
+        font-size: 0.5em !important;
+        box-sizing: content-box;
+        background: linear-gradient(to right, orange, white, orange, white, orange, white);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    
+    .pic:hover::before {
+        content: "A picture of the day will also appear in a side card, whatever picture is shown was taken on the same date as today (with the exception of the year).";
+        font-size: 0.5em !important;
+        box-sizing: content-box;
+        background: linear-gradient(to right, orange, white, orange, white, orange, white);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    
+    .ur:hover::before {
+        content: "Users can then hover over their result images and click one of the heart buttons to add it to a list of favorite images. This is connected to local storage and will be saved even if the user refreshes.";
+        font-size: 0.5em !important;
         box-sizing: content-box;
         background: linear-gradient(to right, orange, white, orange, white, orange, white);
         -webkit-background-clip: text;
@@ -927,9 +962,9 @@
     /* Passage about my project. */
     .project__passage {
         text-align: left;
-        margin: 22px 0;
-        font-size: 0.5em;
-        font-weight: 600;
+        margin: 1.375em 0 !important;
+        font-size: 0.5em !important;
+        font-weight: 600 !important;
         background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -1101,10 +1136,10 @@ nav {
 section:nth-child(even) {
     background-image:url('./assets/img/section__bg.jpeg');
     opacity: 0.9;
-    background-size:100%;
+    background-size:100% !important;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height:100%;
+    height:100% !important;
     width:100%;
 }
 
@@ -1384,10 +1419,16 @@ nav input[type='checkbox'], nav label {
     /* Other Ref. https://www.w3schools.com/css/css3_shadows_box.asp#:~:text=Set%20the%20Spread%20Radius%20of,the%20size%20of%20the%20shadow. */
     box-shadow: 0.188em 0.188em 0.188em 0.188em rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,0.6363139005602241) 0%, rgba(9,9,121,0.6223082983193278) 35%, rgba(65,72,74,0.6727284663865547) 100%); border-radius: 2.813em;
+    display: flex !important;
+    justify-content: center !important;
+    align-content: center !important;
 }
 
 /* Ref. Effect https://www.w3schools.com/howto/howto_css_glowing_text.asp */
 .whenUgotDaGlow {
+    display: flex !important;
+    justify-content: center !important;
+    align-content: center !important;
     background: linear-gradient(to top, #F99242, #Dc4D01);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -1399,9 +1440,15 @@ nav input[type='checkbox'], nav label {
 
 @-webkit-keyframes glow {
   from {
+    display: flex !important;
+    justify-content: center !important;
+    align-content: center !important;
     text-shadow: 0 0 0.056 #4169e3, 0 0 0.056 #F99245, 0 0 0.056 white;
   }
   to {
+    display: flex !important;
+    justify-content: center !important;
+    align-content: center !important;
     text-shadow: 0 0 0.051em white, 0 0 0.051em #F99245, 0 0 0.051em #4169e1;
   }
 }
@@ -1628,6 +1675,33 @@ nav input[type='checkbox'], nav label {
 .third:hover::before {
     content: "HTML5 74.2% | JavaScript 17.1% | CSS3 8.7%";
     font-size: 1.2em;
+    box-sizing: content-box;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.se:hover::before {
+    content: "These Search Engines are a responsive web app that displays images and information about space, stars and planets. The user enters a desired word, and when the search button is pressed results appear using two NASA API's and one Wikipedia API.";
+    font-size: 1.5em;
+    box-sizing: content-box;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.pic:hover::before {
+    content: "A picture of the day will also appear in a side card, whatever picture is shown was taken on the same date as today (with the exception of the year).";
+    font-size: 1.5em;
+    box-sizing: content-box;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.ur:hover::before {
+    content: "Users can then hover over their result images and click one of the heart buttons to add it to a list of favorite images. This is connected to local storage and will be saved even if the user refreshes.";
+    font-size: 1.5em;
     box-sizing: content-box;
     background: linear-gradient(to right, orange, white, orange, white, orange, white);
     -webkit-background-clip: text;
